# mango-v4

./: Anchor.toml  README.md  RELEASING.md  release-to-devnet.sh  run-anchor-tests.sh
.github/workflows/: ci-code-review-rust.yml
anchor-tests/: test.ts
programs/mango-v4/: Cargo.toml
programs/mango-v4/src/: lib.rs
programs/mango-v4/src/accounts_ix/: perp_create_market.rs
programs/mango-v4/src/state/: oracle.rs
programs/mango-v4/tests/cases/: test_ix_gate_set.rs
ts/client/: ids.json
ts/client/scripts/archive/: devnet-admin-close.ts  devnet-admin.ts  devnet-user-2.ts  devnet-user-close-account.ts  devnet-user.ts
ts/client/scripts/archive/account-shrink/: admin.ts  user.ts
ts/client/src/: mango_v4.ts
ts/client/src/constants/: index.ts
