[package]
name = "mango-v4"
version = "0.22.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_v4"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
test-bpf = ["client"]
client = ["solana-sdk", "no-entrypoint"]
# Enables GPL-licensed parts of the code. See LICENSE file.
enable-gpl = ["openbook-v2/enable-gpl"]
custom-heap = []

[dependencies]
# todo: when to fix, when to use caret? need a regular chore to bump dependencies
# note: possibly need init-if-needed feature
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
arrayref = "0.3.6"
bincode = "1.3.3"
borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "^1.7.2", features = ["min_const_generics"] }
default-env = "0.1.1"
derivative = "2.2.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = ["serde", "borsh", "debug-assert-in-release"]  }
num_enum = "0.5.1"
pyth-sdk-solana = "0.8.0"
serde = "^1.0"
serum_dex = {  git = "https://github.com/openbook-dex/program.git", default-features=false, features = ["no-entrypoint", "program"] }
solana-program = "~1.16.7"

solana-address-lookup-table-program = "~1.16.7"
solana-sdk = { version = "~1.16.7", default-features = false, optional=true }
solana-security-txt = "1.1.0"
static_assertions = "1.1"


openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2.git", features = ["no-entrypoint"] }


[dev-dependencies]
solana-program-test = "~1.16.7"
solana-sdk = { version = "~1.16.7", default-features = false }
solana-logger = "~1.16.7"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
async-trait = "0.1.52"
itertools = "0.10.3"
rand = "0.8.4"
lazy_static = "1.4.0"
num = "0.4.0"
regex = "1"
